--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "cra-template": "1.2.0",
     "framer-motion": "^12.0.0",
+    "lodash": "^4.17.21",
     "motion": "^12.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
